--- a/train.ipynb
+++ b/train.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "### Classifier\n",
     "\n",
-    "explain about the notebook"
+    "Here you are going to find how to train a image classifier based on Mobilenet v2 architecture. \n",
+    "\n",
+    "It is possible to execute each cell click in \"Run\" or pressing \"Shift+Enter\"."
    ]
   },
   {
@@ -65,15 +67,12 @@
    "source": [
     "### Variables declaration\n",
     "\n",
-    "Variable input_image_size: \n",
-    "The input of classifier (neural net) is a image (matrix) of size (224, 224, 3)\n",
+    "input_image_size: The input of classifier (neural net) is a image (matrix) of size (224, 224, 3)\n",
     "\n",
-    "Variable mobiletnet_alpha:\n",
-    "Alpha: controls the width of the network. \n",
-    "This is known as the width multiplier in the MobileNetV2 paper.\n",
-    "If alpha < 1.0, proportionally decreases the number of filters in each layer.\n",
-    "If alpha > 1.0, proportionally increases the number of filters in each layer.\n",
-    "If alpha = 1, default number of filters from the paper are used at each layer.\n",
+    "mobiletnet_alpha: controls the width of the network. This is known as the width multiplier in the MobileNetV2 paper.\n",
+    "* If alpha < 1.0, proportionally decreases the number of filters in each layer.\n",
+    "* If alpha > 1.0, proportionally increases the number of filters in each layer.\n",
+    "* If alpha = 1, default number of filters from the paper are used at each layer.\n",
     "\n",
     "Papers:\n",
     "MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications (Mobilenet V1)\n",
@@ -89,13 +88,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Path to the local where the trained model will be pacled. \".\" points to the current folder where\n",
+    "# jupyter notebook was called. \"model\" is a folder inside directory \"mobilenet_classification_lecture\"\n",
     "output_model_path = \"./model\"\n",
     "\n",
     "input_image_size = 224\n",
     "mobiletnet_alpha = 0.5\n",
     "\n",
+    "# hyperparameter to control the training phase\n",
+    "# it is the number of images loaded at one time to train the neural network\n",
     "batch_size = 16\n",
     "\n",
+    "# classes used to train\n",
     "classes = ['background',\n",
     "           'traf_sign_60',\n",
     "           'traf_sign_free',\n",
@@ -121,12 +125,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# method used to create the model of the neural network\n",
     "def build_mobilenet_v2(image_size, alpha, classes):\n",
     "    \n",
     "    # how many classes do we have\n",
     "    num_classes = len(classes)\n",
     "\n",
-    "    # Load moblenetv2 without the class classification layers\n",
+    "    # Load moblenetv2 without the class classification layers from keras api\n",
     "    base_model = MobileNetV2(input_shape=(image_size, image_size, 3), \n",
     "                        alpha=alpha,  \n",
     "                        include_top=False, \n",
@@ -134,10 +139,6 @@
     "                        input_tensor=None, \n",
     "                        pooling=None, \n",
     "                        classes=1000)\n",
-    "\n",
-    "    # freeze layer already trained with imagenet\n",
-    "    #for layer in base_model.layers:\n",
-    "    #    layer.trainable = False\n",
     "\n",
     "    # Append new class classificaiton layers\n",
     "    # add a global spatial average pooling layer\n",
@@ -152,15 +153,11 @@
     "    \n",
     "    # this is the model we will train\n",
     "    model = Model(inputs=base_model.input, outputs=predictions)\n",
-    "    \n",
+    "\n",
+    "    # return the model that was created\n",
     "    return model\n",
-    "    \n",
-    "def import_model():\n",
-    "    pass\n",
     "\n",
-    "def load_dataset():\n",
-    "    pass\n",
-    "\n",
+    "# method used to print images in the notebook\n",
     "def plot_images(images, fig_size=(12,6), rows=1, interp=False, titles=None):\n",
     "    \n",
     "    if type(images[0]) is np.ndarray:\n",
@@ -575,11 +572,13 @@
     }
    ],
    "source": [
+    "# load training dataset in batches from the \"train\" folder\n",
     "train_batches = image.ImageDataGenerator().flow_from_directory(dataset_train_path, \n",
     "                                                               target_size=(224,224),\n",
     "                                                               batch_size=batch_size,\n",
     "                                                               classes=classes)\n",
     "\n",
+    "# load valiation dataset in batches from the \"validation\" folder\n",
     "validation_batches = image.ImageDataGenerator().flow_from_directory(dataset_validation_path, \n",
     "                                                                    target_size=(224,224), \n",
     "                                                                    batch_size=batch_size,\n",
@@ -644,11 +643,16 @@
    "source": [
     "### Train configuration\n",
     "\n",
-    "Optimizer:\n",
+    "Loss: function that measure the difference between the ground truth, and the result from the neural network.\n",
+    "* categorical coss-entropy: used in classification problems\n",
+    "* MSE (mean squared error) used in regression problems\n",
+    "https://keras.io/losses/\n",
     "\n",
-    "Losses:\n",
+    "Optimizer: method used to minimize (or maximize) the loss function, changing the weights of the neural network. \n",
+    "https://keras.io/optimizers/\n",
     "\n",
-    "Metrics:\n"
+    "Metrics: function used to evaluate how well the neural network is performing.\n",
+    "https://keras.io/metrics/"
    ]
   },
   {
@@ -693,7 +697,12 @@
     }
    ],
    "source": [
-    "epochs = 2\n",
+    "# Number of times that the neural network will going to train over the dataset\n",
+    "# If the value is 1, it will only see one time each image of the dataset\n",
+    "# The neural network will learn more with more epochs\n",
+    "# If the neural network train over the dataset to much, it will have a problem of overfiting\n",
+    "# https://en.wikipedia.org/wiki/Overfitting\n",
+    "epochs = 10\n",
     "\n",
     "model.fit_generator(train_batches, steps_per_epoch=step_size,\n",
     "                    validation_data=validation_batches, validation_steps=step_size,\n",
@@ -705,7 +714,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test"
+    "### Test\n",
+    "\n",
+    "Here the neural network is already trained, it will predict the class of images from the validation dataset, images that was not used during the training phase.\n",
+    "\n",
+    "Here we can evaluate how well the neural network is performing."
    ]
   },
   {
@@ -757,7 +770,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save model and weights"
+    "### Save model and weights\n",
+    "\n",
+    "Here the model will be save with the weights. In this way, it could be used later without the need to train it again."
    ]
   },
   {
