--- a/train.ipynb
+++ b/train.ipynb
@@ -573,13 +573,13 @@
    ],
    "source": [
     "# load training dataset in batches from the \"train\" folder\n",
-    "train_batches = image.ImageDataGenerator().flow_from_directory(dataset_train_path, \n",
+    "train_batches = image.ImageDataGenerator(rescale=1.0/255.0).flow_from_directory(dataset_train_path, \n",
     "                                                               target_size=(224,224),\n",
     "                                                               batch_size=batch_size,\n",
     "                                                               classes=classes)\n",
     "\n",
     "# load valiation dataset in batches from the \"validation\" folder\n",
-    "validation_batches = image.ImageDataGenerator().flow_from_directory(dataset_validation_path, \n",
+    "validation_batches = image.ImageDataGenerator(rescale=1.0/255.0).flow_from_directory(dataset_validation_path, \n",
     "                                                                    target_size=(224,224), \n",
     "                                                                    batch_size=batch_size,\n",
     "                                                                    classes=classes)\n",
