improving my english

--- a/train.ipynb
+++ b/train.ipynb
@@ -4,11 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Classifier\n",
+    "## Classifying Traffic Signs\n",
     "\n",
-    "Here you are going to find how to train a image classifier based on Mobilenet v2 architecture. \n",
+    "This notebook presents how to train a image classifier based on Mobilenet v2 architecture. \n",
     "\n",
-    "It is possible to execute each cell click in \"Run\" or pressing \"Shift+Enter\"."
+    "**It is possible to execute each cell click in \"Run\" or pressing \"Shift+Enter\".**\n",
+    "\n",
+    "Reference:\n",
+    "MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications (Mobilenet V1)\n",
+    "\n",
+    "https://arxiv.org/abs/1704.04861\n",
+    "\n",
+    "MobileNetV2: Inverted Residuals and Linear Bottlenecks\n",
+    "\n",
+    "http://openaccess.thecvf.com/content_cvpr_2018/html/Sandler_MobileNetV2_Inverted_Residuals_CVPR_2018_paper.html"
    ]
   },
   {
@@ -67,47 +76,41 @@
    "source": [
     "### Variables declaration\n",
     "\n",
-    "input_image_size: The input of classifier (neural net) is a image (matrix) of size (224, 224, 3)\n",
+    "Some hyperparameters (variables) used to build the neural network are defined here. The Mobilenet papers present hyperparameters used to change the size and learning capacity of the model, such as width multiplier (alpha), input size, and resolution multiplier. \n",
     "\n",
-    "mobiletnet_alpha: controls the width of the network. This is known as the width multiplier in the MobileNetV2 paper.\n",
-    "* If alpha < 1.0, proportionally decreases the number of filters in each layer.\n",
-    "* If alpha > 1.0, proportionally increases the number of filters in each layer.\n",
-    "* If alpha = 1, default number of filters from the paper are used at each layer.\n",
+    "This tutorial only changes the multiplier width to half of the original model, in order to construct a smaller and less computationally expensive model.\n",
     "\n",
-    "Papers:\n",
-    "MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications (Mobilenet V1)\n",
-    "https://arxiv.org/abs/1704.04861\n",
-    "\n",
-    "MobileNetV2: Inverted Residuals and Linear Bottlenecks\n",
-    "http://openaccess.thecvf.com/content_cvpr_2018/html/Sandler_MobileNetV2_Inverted_Residuals_CVPR_2018_paper.html"
+    "* If mobiletnet_alpha = 1, default number of filters from the paper are used at each layer.\n",
+    "* If mobiletnet_alpha < 1.0, proportionally decreases the number of filters in each layer.\n",
+    "* If mobiletnet_alpha > 1.0, proportionally increases the number of filters in each layer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Path to the local where the trained model will be pacled. \".\" points to the current folder where\n",
-    "# jupyter notebook was called. \"model\" is a folder inside directory \"mobilenet_classification_lecture\"\n",
+    "# Path of train and validation datasets\n",
+    "dataset_train_path = \"./dataset/train\"\n",
+    "dataset_validation_path = \"./dataset/validation\"\n",
+    "\n",
+    "# Path to the local where the trained model will be saved\n",
+    "# \".\" points to the current folder where jupyter notebook was called\n",
+    "# \"/model\" is a folder inside directory \"mobilenet_classification_lecture\"\n",
     "output_model_path = \"./model\"\n",
     "\n",
     "input_image_size = 224\n",
     "mobiletnet_alpha = 0.5\n",
     "\n",
-    "# hyperparameter to control the training phase\n",
-    "# it is the number of images loaded at one time to train the neural network\n",
+    "# number of images loaded at once to train the neural network\n",
     "batch_size = 16\n",
     "\n",
-    "# classes used to train\n",
+    "# classes that are going to be classified\n",
     "classes = ['background',\n",
     "           'traf_sign_60',\n",
     "           'traf_sign_free',\n",
-    "           'traf_sign_stop']\n",
-    "\n",
-    "# Path for train and validation datasets\n",
-    "dataset_train_path = \"./dataset/train\"\n",
-    "dataset_validation_path = \"./dataset/validation\"\n"
+    "           'traf_sign_stop']\n"
    ]
   },
   {
@@ -116,7 +119,9 @@
    "source": [
     "### Functions declaration\n",
     "\n",
-    "Info about MobileNetV2 function https://keras.io/applications/#mobilenetv2"
+    "Info about MobileNetV2 function: https://keras.io/applications/#mobilenetv2\n",
+    "\n",
+    "The MobileNetV2 model present in Keras API was trained in the Imagenet dataset that contains 1000 classes. This tutorial will classify just 4 classes, for this reason it is necessary to delete the last layers of the original model (fully-connected and sigmoid layers), and add new ones for this problem."
    ]
   },
   {
@@ -131,7 +136,7 @@
     "    # how many classes do we have\n",
     "    num_classes = len(classes)\n",
     "\n",
-    "    # Load moblenetv2 without the class classification layers from keras api\n",
+    "    # Load moblenetv2 model without last layers setting include_top=False\n",
     "    base_model = MobileNetV2(input_shape=(image_size, image_size, 3), \n",
     "                        alpha=alpha,  \n",
     "                        include_top=False, \n",
@@ -145,16 +150,16 @@
     "    x = base_model.output\n",
     "    x = GlobalAveragePooling2D()(x)\n",
     "\n",
-    "    # let's add a fully-connected layer\n",
+    "    # add a fully-connected layer ()\n",
     "    x = Dense(1024, activation='relu')(x)\n",
     "    \n",
-    "    # and a logistic layer -- let's say we have 200 classes\n",
+    "    # Multinomial logistic regression layer with the number of classes\n",
+    "    # This layers predict a probability value for each class\n",
     "    predictions = Dense(num_classes, activation='softmax')(x)\n",
     "    \n",
-    "    # this is the model we will train\n",
+    "    # merge the mobilenet layers with the layers defined for this tutorial\n",
     "    model = Model(inputs=base_model.input, outputs=predictions)\n",
     "\n",
-    "    # return the model that was created\n",
     "    return model\n",
     "\n",
     "# method used to print images in the notebook\n",
@@ -541,7 +546,7 @@
     }
    ],
    "source": [
-    "# Build model based on mobilenet v2\n",
+    "# Build model\n",
     "model = build_mobilenet_v2(input_image_size, mobiletnet_alpha, classes=classes)\n",
     "\n",
     "# Show the model\n",
@@ -579,23 +584,23 @@
     }
    ],
    "source": [
-    "# load training dataset in batches from the \"train\" folder\n",
-    "# We are going to normalize the image, dividing each pixel by 255 (rescale=1.0/255.0)\n",
-    "# Each pixel will have values from 0 to 1\n",
+    "# Load training dataset in batches from the \"train\" folder\n",
+    "# Normalize each image, dividing each pixel by 255 (rescale=1.0/255.0)\n",
+    "# Each pixel must have values between 0 and 1\n",
     "# This helps the neural newtwork to learn\n",
-    "# BUT, now every time that you send a image to the neural network you need to divide by 255\n",
+    "# REMEMBER: it is necessary to normalize every image to train and test the model\n",
     "train_batches = image.ImageDataGenerator(rescale=1.0/255.0).flow_from_directory(dataset_train_path, \n",
     "                                                               target_size=(224,224),\n",
     "                                                               batch_size=batch_size,\n",
     "                                                               classes=classes)\n",
     "\n",
-    "# load valiation dataset in batches from the \"validation\" folder\n",
+    "# Load valiation dataset in batches from the \"validation\" folder\n",
     "validation_batches = image.ImageDataGenerator(rescale=1.0/255.0).flow_from_directory(dataset_validation_path, \n",
     "                                                                    target_size=(224,224), \n",
     "                                                                    batch_size=batch_size,\n",
     "                                                                    classes=classes)\n",
     "\n",
-    "# number of samples used in an epoch = batch_size * steps_per_epochs\n",
+    "# Number of samples used in one epoch = batch_size * steps_per_epochs\n",
     "step_size = train_batches.n//train_batches.batch_size\n",
     "\n",
     "print(\"\\nBatch size: \" + str(batch_size))\n",
@@ -612,7 +617,7 @@
    "source": [
     "### Dataset demonstration\n",
     "\n",
-    "Present some of the images that are inside the batches"
+    "Some images that are inside the dataset"
    ]
   },
   {
@@ -647,9 +652,7 @@
     "### Train configuration\n",
     "\n",
     "Loss: function that measure the difference between the ground truth, and the result from the neural network.\n",
-    "* categorical coss-entropy: used in classification problems\n",
-    "* MSE (mean squared error) used in regression problems\n",
-    "https://keras.io/losses/\n",
+    "* categorical coss-entropy: used in classification problems https://keras.io/losses/\n",
     "\n",
     "Optimizer: method used to minimize (or maximize) the loss function, changing the weights of the neural network. \n",
     "https://keras.io/optimizers/\n",
@@ -660,12 +663,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Adam' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8c16e89f8008>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'categorical_crossentropy'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m.0001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mmetrics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'accuracy'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Adam' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "optimizer = Adam(lr=.0001)\n",
     "loss = 'categorical_crossentropy'\n",
+    "optimizer = Adam(lr=.0001)\n",
     "metrics = ['accuracy']\n",
     "\n",
     "model.compile(optimizer, loss=loss, metrics=metrics)"
@@ -701,9 +716,8 @@
    ],
    "source": [
     "# Number of times that the neural network will going to train over the dataset\n",
-    "# If the value is 1, it will only see one time each image of the dataset\n",
     "# The neural network will learn more with more epochs\n",
-    "# If the neural network train over the dataset to much, it will have a problem of overfiting\n",
+    "# If the neural network train over the dataset too much, it will have a problem of overfiting\n",
     "# https://en.wikipedia.org/wiki/Overfitting\n",
     "epochs = 10\n",
     "\n",
@@ -719,9 +733,7 @@
    "source": [
     "### Test\n",
     "\n",
-    "Here the neural network is already trained, it will predict the class of images from the validation dataset, images that was not used during the training phase.\n",
-    "\n",
-    "Here we can evaluate how well the neural network is performing."
+    "Now that the neural network is already trained, it is possible to analyse the accuracy of the model using the validation set.These images were not used in the training phase."
    ]
   },
   {
@@ -775,7 +787,7 @@
    "source": [
     "### Save model and weights\n",
     "\n",
-    "Here the model will be save with the weights. In this way, it could be used later without the need to train it again."
+    "The weights from the model can be saved after the training phase. In this way, it is possible to reuse the current state of the model without any necessity of training the model again. It is also possible to load the current model to continue training, if necessery. "
    ]
   },
   {
@@ -805,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
